# building_software

./: LICENSE  README.md  Schedule.md
assignments/: Assignment.md  Homework1.md  Homework2.md  Homework3.md  Homework4.md  Lesson1_Assignment.md  Lesson2_Assignment.md  Lesson3_Assignment.md  Lesson3b_Assignment.md  Lesson4_Assignment.md  Lesson5_Assignment.md  Lesson6_Assignment.md
assignments/assignment_template/: Analysis.py  pyproject.toml
lessons/: Lesson7_APIs.pptx  Working in Parallel_ Branches and Pull Requests (1).pptx
lessons/1 - Configs and APIs/: shell_on_colab.md
lessons/1 - Configuration/: 1 - Configuration and APIs.pptx
lessons/2 - Documentation and errors/: 2 - Documentation and Errors.pptx  Class Demo.ipynb  docstring_ex.py
lessons/3 - Testing software/: 3 - Testing software, Building Python packages.pptx
lessons/3 - Testing software and building packages/: github_action_pytest.yml  test_mycode.py  using_git_on_colab.md
lessons/4 - Git for teams/: 4 - Working in software teams.pptx
lessons/BRS4 - Application programming interfaces/: github_api.py  ntfy_api.py
lessons/BRS5 - Python documentation and packages/demos/mypackage/: README.md  pyproject.toml
lessons/BRS5 - Python documentation and packages/demos/mypackage/mymodule/: mymodule.py
lessons/BRS5 - Python documentation and packages/demos/simple_package/: LICENSE  mymodule.py  pyproject.toml  test_mymodule.py
lessons/lesson0/: Lesson0_GettingStarted.pptx  Lesson0_InstructorNotes.md
lessons/lesson1/: Lesson1_InstructorNotes.md  Lesson1_WorkinginParallel.pptx
(+57 files in other folders)
